fixed post div collapse issue, when all post erased

--- a/src/app/socialPosts/socialPosts.component.css
+++ b/src/app/socialPosts/socialPosts.component.css
@@ -2,7 +2,8 @@ form {
     width: 50%; 
     margin: auto;
     background-color: white;
-    border-radius: 2px solid black;
+    border-radius: 4px;
+    border: none;
 }
 
 div {
@@ -25,16 +26,18 @@ h1 {
 
 button {
     background-color: white;
+    margin: 6px auto;
+    width: 100%;
     color: black; 
     align-content: center; 
-    border: 1px solid; 
+    border: 2px solid black; 
     border-radius: 4px;
     padding-top: 4px;
 }
 
 .componentWidths {
     margin: auto;
-    width: 50%;
+    /* width: 50%; */
 }
 
 .rounded {
@@ -46,7 +49,7 @@ button {
 
 #formBoxShow {
     background-color: lightblue; 
-    width: 40%; 
+    width: 70%; 
     padding:3% 6% 1%;
 }
 
